commented out fixed from background url and it started working on IOS also

--- a/public/stylesheets/partials/_contact.sass
+++ b/public/stylesheets/partials/_contact.sass
@@ -2,7 +2,7 @@ address
   font-family: Titillium Web, sans-serif
 
 #contact-overlay-support
-  background: url('/images/metallicns0.jpg') no-repeat center center fixed
+  background: url('/images/metallicns0.jpg') no-repeat center center //fixed
   -webkit-background-size: cover
   -moz-background-size: cover
   -o-background-size: cover
