--- a/public/stylesheets/partials/_dns.sass
+++ b/public/stylesheets/partials/_dns.sass
@@ -1,5 +1,5 @@
 #dns-overlay-support
-  background: url('/images/ns5pricing.jpg') no-repeat center center fixed
+  background: url('/images/ns5pricing.jpg') no-repeat center center //fixed
   -webkit-background-size: cover
   -moz-background-size: cover
   -o-background-size: cover
