--- a/public/stylesheets/partials/_faq.sass
+++ b/public/stylesheets/partials/_faq.sass
@@ -1,5 +1,5 @@
 #faq-overlay-support
-  background: url('/images/ns5FAQ.jpg') no-repeat center center fixed
+  background: url('/images/ns5FAQ.jpg') no-repeat center center //fixed
   -webkit-background-size: cover
   -moz-background-size: cover
   -o-background-size: cover
