--- a/public/stylesheets/partials/_main.sass
+++ b/public/stylesheets/partials/_main.sass
@@ -7,7 +7,7 @@ body
   -ms-user-select: none
   user-select: none
 #landing-overlay-support
-  background: url('/images/ns5server.jpg') no-repeat center center fixed
+  background: url('/images/ns5server.jpg') no-repeat center center //fixed
   -webkit-background-size: cover
   -moz-background-size: cover
   -o-background-size: cover
