--- a/public/stylesheets/partials/_vyingpedia.sass
+++ b/public/stylesheets/partials/_vyingpedia.sass
@@ -6,7 +6,7 @@
   background-size: cover
 
 #vyp-overlay-support
-  background: url('/images/vypedia.jpg') no-repeat center center fixed
+  background: url('/images/vypedia.jpg') no-repeat center center //fixed
   -webkit-background-size: cover
   -moz-background-size: cover
   -o-background-size: cover
