--- a/public/stylesheets/partials/_web-development.sass
+++ b/public/stylesheets/partials/_web-development.sass
@@ -3,7 +3,7 @@
   margin-bottom: 5%
 
 #webdev-overlay-support
-  background: url('/images/ns5contactserver.jpg') no-repeat center center fixed
+  background: url('/images/ns5contactserver.jpg') no-repeat center center //fixed
   -webkit-background-size: cover
   -moz-background-size: cover
   -o-background-size: cover
